@@ -1,3 +1,13 @@
+2006-11-10  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* src/win/wpause.c:
+	* src/win/wtext.c:
+	* src/wxterminal/wxt_gui.cpp:
+	* src/wxterminal/wxt_gui.h:
+	* src/wxterminal/wxt_plot.h:
+	Rework and simplify the event handling from the wxt terminal on
+	Windows. Remove hooks from the wxt terminal in the Windows files.
+
 2006-11-07  Timothee Lecomte  <timothee.lecomte@ens.fr>
 
 	* src/wxterminal/wxt_gui.cpp (wxtPanel::DrawToDC): Draw the zoom
